# gcp-lite-rs

./: .gitignore  Cargo.toml
.claude/: CLAUDE.md  COVERAGE.md  settings.json
.claude/docs/: api-doc-template.md  architecture.md  codegen-reference.md  integration-testing-methodology.md  lro-patterns.md  testing-guide.md
.claude/hooks/: protect-generated.sh  protect-main-branch.sh  quality-gate.sh
.github/workflows/: ci.yml  release.yml
benches/: client_bench.rs
codegen/: __init__.py  __main__.py  bootstrap.py  cli.py  extend.py  fetch_discovery.py  plugin.py  pyproject.toml  reference.py  test_plugin.py  verify.py
codegen/manifests/: accessapproval.toml  apikeys.toml  appengine.toml  bigquery.toml  bigquery.toml.draft  cloudasset.toml  cloudbilling.toml  cloudkms.toml  cloudresourcemanager.toml  cloudscheduler.toml  compute.toml  container.toml  dlp.toml  dns.toml  essentialcontacts.toml  gkebackup.toml  iam.toml  logging.toml  monitoring.toml  osconfig.toml  recommender.toml  secretmanager.toml  service_usage.toml  sqladmin.toml  storage.toml
codegen/reference/: bigquery.full.toml  cloudasset.full.toml  cloudbilling.full.toml  cloudresourcemanager.full.toml  cloudscheduler.full.toml  compute.full.toml  container.full.toml  gkebackup.full.toml  iam.full.toml  monitoring.full.toml  recommender.full.toml  secretmanager.full.toml  service_usage.full.toml  sqladmin.full.toml  storage.full.toml
docs/bigquery/: api.md  operations.md  usage.md
src/: client.rs  error.rs  fixture_tests.rs  lib.rs  mock_client.rs  operation.rs  rate_limit.rs  retry.rs  serde_base64.rs  test_support_demo.rs
(+201 files in other folders)
