[package]
name = "gcp-lite-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Lightweight HTTP client for Google Cloud Platform APIs"
repository = "https://github.com/Elsayed91/gcp-lite-rs"
documentation = "https://docs.rs/gcp-lite-rs"
keywords = ["gcp", "google-cloud"]
categories = ["api-bindings"]

[dependencies]
cloud-lite-core = { package = "cloud-lite-core-rs", version = "0.1", path = "../cloud-lite-core" }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["time", "sync", "process"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
async-stream = "0.3"
urlencoding = "2.1"
jsonwebtoken = "9"
base64 = "0.22"
dirs = "6"
which = "7.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
tempfile = "3"
regex = "1.10"
proptest = "1.4"
urlencoding = "2.1"
insta = { version = "1.34", features = ["json"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
serial_test = "3.0"
gcp-lite = { package = "gcp-lite-rs", path = ".", features = ["test-support"] }
chrono = "0.4.43"

[[bench]]
name = "client_bench"
harness = false

[dependencies.regex]
version = "1.10"
optional = true

[features]
default = []
test-support = ["regex"]

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 0
debug = 0
